@@ -1,6 +1,6 @@
 Package: phyloseq
-Version: 1.4.4
-Date: 2013-05-22
+Version: 1.4.5
+Date: 2013-09-17
 Title: Handling and analysis of high-throughput microbiome
     census data.
 Description: phyloseq provides a set of classes and tools
@@ -16,7 +16,7 @@ Imports:
     Biostrings (>= 2.26.3),
     foreach (>= 1.4),
     ggplot2 (>= 0.9.3),
-    igraph0 (>= 0.5.6),
+    igraph (>= 0.6.5.2),
     multtest (>= 2.14),
     plyr (>= 1.8),
     reshape (>= 0.8.4),
