@@ -139,12 +139,13 @@ import(ggplot2)
 import(reshape)
 import(scales)
 import(vegan)
-importFrom(igraph0,degree)
-importFrom(igraph0,delete.vertices)
-importFrom(igraph0,get.edgelist)
-importFrom(igraph0,graph.adjacency)
-importFrom(igraph0,layout.fruchterman.reingold)
-importFrom(igraph0,V)
+importFrom(igraph,degree)
+importFrom(igraph,delete.vertices)
+importFrom(igraph,get.edgelist)
+importFrom(igraph,get.vertex.attribute)
+importFrom(igraph,graph.adjacency)
+importFrom(igraph,layout.fruchterman.reingold)
+importFrom(igraph,V)
 importFrom(multtest,mt.maxT)
 importFrom(multtest,mt.minP)
 importFrom(plyr,aaply)
